--- a/public/css/main.css
+++ b/public/css/main.css
@@ -218,7 +218,7 @@ img {
 
 .input-container {
   position: relative;
-  margin-top: 30px;
+  margin-top: 1rem;
   width: 100%;
 }
 .input-container label:not(.input-help) {
@@ -278,6 +278,12 @@ input[type=submit]:hover, button.btn:hover, a.btn:hover {
 input[type=submit].danger, button.btn.danger, a.btn.danger {
   background-color: #d3431b;
   transform: scale(0.9);
+}
+input[type=submit]:disabled, button.btn:disabled, a.btn:disabled {
+  opacity: 0.8;
+}
+input[type=submit]:disabled:hover, button.btn:disabled:hover, a.btn:disabled:hover {
+  cursor: not-allowed;
 }
 
 .input-help {
@@ -909,12 +915,17 @@ section:not(.account-container) h2 {
 }
 .forum .message {
   display: grid;
-  grid-template-rows: 1.5rem auto 1.5rem;
+  grid-template-rows: 1.5rem auto auto;
   grid-template-columns: 40px auto;
   border: 1px solid #676767;
   border-radius: 10px;
   margin: 1rem 0.5rem;
   padding: 0.75rem;
+}
+.forum .message.connected {
+  grid-template-columns: auto;
+  border: none;
+  margin: 0;
 }
 .forum .message h4, .forum .message p {
   margin: 0;
@@ -1001,6 +1012,45 @@ section:not(.account-container) h2 {
 .forum .message .options button.flag:hover {
   background-image: linear-gradient(#a7a7a7 55%, #FEFEFE 55%);
   border-left-color: #a7a7a7;
+}
+.forum .message .comments {
+  grid-column: 2;
+  border: 1px solid #676767;
+  position: relative;
+  margin-top: 0.75rem;
+  padding-bottom: 0.75rem;
+  display: none;
+}
+.forum .message .comments.open {
+  display: block;
+}
+.forum .message .comments::before {
+  content: "";
+  position: absolute;
+  border: 0.5rem solid transparent;
+  border-bottom-color: #676767;
+  height: 0;
+  width: 0;
+  left: 2rem;
+  top: -1rem;
+}
+.forum .message .comments .no-comments {
+  padding: 0.5rem;
+}
+.forum .message .comments .replyToForm {
+  grid-column: 2;
+  width: calc(100% - 1.5rem);
+  margin: 0 auto;
+}
+.forum .message .comments .replyToForm .input-container {
+  margin-top: 0.75rem;
+}
+.forum .message .comments .replyToForm input[type=submit] {
+  margin-top: 0.5rem;
+  padding: 0.25rem 0.75rem;
+}
+.forum .message.question .comments::before {
+  left: 5.75rem;
 }
 
 .mission-statement {
@@ -1173,6 +1223,51 @@ section:not(.account-container) h2 {
     margin: 1.5rem auto;
     width: 95%;
   }
+}
+.code-playground .project-info {
+  column-gap: 2rem;
+  grid-column: 1/-1;
+  grid-template-columns: 1fr 1fr;
+  margin-top: 1rem;
+  display: grid;
+}
+.code-playground .project-info .user-info {
+  display: grid;
+  align-items: end;
+  box-sizing: content-box;
+  background-color: #FEFEFE;
+  grid-template-columns: 64px 200px;
+  grid-template-rows: 1fr 1fr;
+  box-shadow: 2px 2px 8px #202020;
+  border-radius: 10px;
+  justify-self: end;
+  column-gap: 1rem;
+  padding: 1rem;
+  width: 264px;
+}
+.code-playground .project-info .user-info .profile-pic {
+  border-radius: 50%;
+  grid-row: 1/-1;
+  height: 64px;
+  width: 64px;
+}
+.code-playground .project-info .user-info .user-name {
+  width: 100%;
+  grid-column: 2;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  grid-row: 1;
+  margin: 0;
+}
+.code-playground .project-info .user-info .view-profile {
+  font-size: small;
+  font-weight: bold;
+  color: #676767;
+  text-decoration: none;
+  align-self: start;
+  grid-column: 2;
+  grid-row: 2;
 }
 
 .language-list {
