--- a/public/scss/forum.scss
+++ b/public/scss/forum.scss
@@ -17,12 +17,17 @@
 
     .message {
         display: grid;
-        grid-template-rows: 1.5rem auto 1.5rem;
+        grid-template-rows: 1.5rem auto auto;
         grid-template-columns: 40px auto;
         border: 1px solid $primary-color;
         border-radius: 10px;
         margin: 1rem 0.5rem;
         padding: 0.75rem;
+        &.connected {
+            grid-template-columns: auto;
+            border: none;
+            margin: 0;
+        }
 
         h4, p {
             margin: 0;
@@ -117,6 +122,49 @@
                     border-left-color: lighten($primary-color, 25);
                 }
             }
+        }
+        .comments {
+            grid-column: 2;
+            border: 1px solid $primary-color;
+            position: relative;
+            margin-top: 0.75rem;
+            padding-bottom: 0.75rem;
+            display: none;
+
+            &.open {
+                display: block;
+            }
+
+            &::before {
+                content: '';
+                position: absolute;
+                border: 0.5rem solid transparent;
+                border-bottom-color: $primary-color;
+                height: 0; width: 0;
+                left: 2rem;
+                top: -1rem;
+            }
+
+            .no-comments {
+                padding: 0.5rem;
+            }
+
+            .replyToForm {
+                grid-column: 2;
+                width: calc(100% - 1.5rem);
+                margin: 0 auto;
+    
+                .input-container {
+                    margin-top: 0.75rem;
+                }
+                input[type="submit"] {
+                    margin-top: 0.5rem;
+                    padding: 0.25rem 0.75rem;
+                }
+            }
+        }
+        &.question .comments::before {
+            left: 5.75rem;
         }
     }
 }
