--- a/public/scss/learn.scss
+++ b/public/scss/learn.scss
@@ -186,6 +186,52 @@
         margin: 1.5rem auto;
         width: 95%;
     }
+
+    .project-info {
+        column-gap: 2rem;
+        grid-column: 1 / -1;
+        grid-template-columns: 1fr 1fr;
+        margin-top: 1rem;
+        display: grid;
+
+        .user-info {
+            display: grid;
+            align-items: end;
+            box-sizing: content-box;
+            background-color: $other-color;
+            grid-template-columns: 64px 200px;
+            grid-template-rows: 1fr 1fr;
+            @include box-shadow;
+            border-radius: 10px;
+            justify-self: end;
+            column-gap: 1rem;
+            padding: 1rem;
+            width: 264px;
+
+            .profile-pic {
+                border-radius: 50%;
+                grid-row: 1 / -1;
+                height: 64px;
+                width: 64px;
+            }
+            .user-name {
+                width: 100%;
+                grid-column: 2;
+                @include ellipses;
+                grid-row: 1;
+                margin: 0;
+            }
+            .view-profile {
+                font-size: small;
+                font-weight: bold;
+                color: $primary-color;
+                text-decoration: none;
+                align-self: start;
+                grid-column: 2;
+                grid-row: 2;
+            }
+        }
+    }
 }
 
 
