--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -5,6 +5,7 @@
 @use 'header';
 @use 'anonymous-homepage';
 @use 'user-homepage';
+@use 'user-settings';
 @use 'input-validation-icon';
 @use 'forum';
 @use 'learn';
