--- a/public/scss/variables.scss
+++ b/public/scss/variables.scss
@@ -16,6 +16,8 @@ $color-cpp: #00A0FD;
 $color-python: #4A98C8;
 // $color-javascript: ;
 
+$checkbox-dim: 1.25rem;
+
 @mixin box-shadow($x: 2px, $y: 2px, $blur: 8px, $col: $accent2-color) {
     box-shadow: $x $y $blur $col;
 }
