--- a/public/scss/globals.scss
+++ b/public/scss/globals.scss
@@ -4,6 +4,13 @@
     font-family: $paragraph-font;
     box-sizing: border-box;
 }
+.material-symbols-outlined {
+    font-variation-settings:
+        'FILL' 0,
+        'wght' 400,
+        'GRAD' 0,
+        'opsz' 48
+}
 h1, h2, h3, h4, h5, h6 {
     font-family: $heading-font;
 }
@@ -91,6 +98,46 @@ main {
 img {
     max-width: 100%;
 }
+
+input[type="checkbox"] {
+    appearance: none;
+    -webkit-appearance: none;
+    position: relative;
+    height: $checkbox-dim;
+    width: $checkbox-dim;
+
+    &::before {
+        content: '';
+        position: absolute;
+        box-sizing: border-box;
+        border: 3px solid $accent1-color;
+        border-radius: 5px;
+        height: $checkbox-dim;
+        width: $checkbox-dim;
+        background-image: linear-gradient(-20deg, $accent1-color 33%, transparent 70%);
+        background-size: $checkbox-dim $checkbox-dim*3;
+        background-position-x: 0px;
+        background-position-y: 0px;
+        transition: background-position-y 0.3s;
+    }
+    &::after {
+        content: '';
+        border: none;
+        position: absolute;
+        height: $checkbox-dim;
+        box-sizing: border-box;
+        width: $checkbox-dim * 0.65;
+        border-right: 4px solid $other-color;
+        border-bottom: 4px solid $other-color;
+        transform: translate(25%, -10%) scale(0.6) rotate(40deg);
+    }
+    &:checked {
+        &::before {
+            background-position-y: -42px;
+        }
+    }
+}
+
 ::selection {
     background-color: $accent1-color;
     color: $other-color;
