--- a/views/includes/head.ejs
+++ b/views/includes/head.ejs
@@ -7,5 +7,6 @@
     <title>Genius Coding | <%= pageTitle %></title>
     <link rel="shortcut icon" href="/images/site-images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.1/styles/<%= editorTheme %>.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
     <link rel="stylesheet" href="/css/main.css">
     <script src="/js/pre-load-functions.js"></script>
